--- a/syllabus500.qmd
+++ b/syllabus500.qmd
@@ -203,6 +203,11 @@ The percent refers to the percent of available weighted points earned. Each assi
 
 Academic honesty is something your professor takes very seriously. Cheating in any form will not be tolerated. Students are required to be familiar with the university's academic honesty policies; ignorance is not an excuse for dishonest behavior. In all cases of cheating, a Violation of Academic Integrity Report will be submitted to the Dean of Graduate Studies to be placed in your university file, with copies provided to you, the department head, and the Dean of Rockefeller College. Additional penalties may include some combination of the following: revision and re-submission of the assignment, reduction of the grade or failure of the assignment, reduction of the course grade or failure of the course, filing of a case with the Office of Conflict Resolution and Civic Responsibility, suspension, or expulsion. For a more detailed description of the university's academic honesty policies, visit the [site](http://www.albany.edu/graduatebulletin/requirements_degree.htm#standards_integrity).
 
+::: callout-important
+## ChatGPT and Other LLMs
+By now, we are all aware of the technological advances in generative large language models (LLMs) trained on large quantities of written language scraped from around the internet. The University policy considers the use of ChatGPT and other generative LLMs to produce classwork without explicit permission from the instructor an act of plagiarism. I do not permit the use of ChatGPT or other generative LLMs in this course. First, generative LLMs can at times invent fictional sources, recombine information that is confidently stated but ultimately incorrect, and can produce generally mediocre and formulaic writing. Such events make the output unreliable - particularly for people aiming to be professionals working in the institutions that govern our society. Second, and more importantly, grappling with complicated trade-offs, collecting and synthesizing complex information thoughtfully, and going through the process of articulating your decisions and the knowledge base that inform them is a large part of an effective professional career. Learning in general is an arduous process that involves practice, trial and error, and confronting your current limits before finding ways to overcome them. In short, learning is work and the process by which that work occurs is often reading and writing, poorly at first and much better over time. I do think that, properly understood, LLMs can be a useful tool in managing routine tasks in which you have mastered the background, can detect and correct errors, and can use such tools effectively. However, early in your careers and in your academic lives, the very purpose of being in a graduate program is to have opportunities to learn new things (or old things in new ways) and using an LLM to do the work involved in learning will only cheat you of opportunities to learn, grow, and develop deeper and more lasting skills. Finally, and more practically, if you are caught using LLMs to produce the work assigned in this class, the work will be given a 0 and you will be cited for plagiarism.
+:::
+
 ### Students with Disabilities
 
 We are committed to providing an accessible learning environment for all students. This includes students with physical, sensory, medical, cognitive, learning, mental health, and other disabilities. If you have, or think you may have a disability, please contact Disability Access and Inclusion Student Services (DAISS) by emailing daiss\@albany.edu or calling 518 -442-5501. DAISS staff will explain the documentation and registration process, and set you up with an appointment. Once you have completed registration, you will be provided with a letter to inform your instructors that you are a student with a disability registered with DAISS, and which lists the recommended reasonable accommodations for your courses.
