--- a/syllabus500.qmd
+++ b/syllabus500.qmd
@@ -95,13 +95,13 @@ Acceptable sources. Generally, your research should use primary sources more tha
 - [U.S. Government Accountability Office reports](www.gao.gov) 
 - The library also has research support services for this class, which can be found [here](https://libguides.library.albany.edu/pad500/home)
 
-Submission of papers. Each final essay is due by midnight on the designated due date. Electronic versions of the paper are to be submitted via the SafeAssign link in Blackboard. It is the student's responsibility to ensure the electronic file is readable and not corrupted. Please note: once you hit the submit button in SafeAssign, you cannot go back and submit a different version.
+Submission of papers. Each final essay is due by midnight on the designated due date. Electronic versions of the paper are to be submitted via the SafeAssign link in Brightspace. It is the student's responsibility to ensure the electronic file is readable and not corrupted. Please note: once you hit the submit button in SafeAssign, you cannot go back and submit a different version.
 
 Late assignments. An assignment is considered late if the paper copy is not submitted at the beginning of class, if the electronic file is not submitted before class, and/or if the electronic file is not readable. Assignments (electronic or hard copy) submitted 10 minutes after the beginning of class or the launch of the following module will be considered late and will be automatically reduced by 10%. Papers submitted one day after the due date will be automatically reduced by 20%; essays submitted two days after the assigned date will be reduced by 30%, etc. Exceptions will be made for extreme health and family emergencies.
 
 ### Weekly Quizzes
 
-Each week, quizzes will be posted to Blackboard on Monday with the rest of the module. Quizzes will be graded using the scale below, and will involve 10-20 multiple choice questions. You must complete each quiz by midnight each Sunday. In the interest of fairness of assessment, I will not accept late quizzes. The quizzes will be timed; once you begin, you will have 20 minutes to complete the quiz. They will be in multiple choice format, but they will require you to apply concepts from the readings. The intent of the quizzes is to help underscore important concepts, ensure you are reading the material with some depth, and thinking through the implications of course material. The questions will vary in their degree of difficulty, so please do not be discouraged if some seem tricky. I will be dropping your lowest three quiz grades. Consider those passes to use as you wish; whether it is taking an easy week or dealing with an unexpected circumstance, you have three freebies. Note that the grading of the quizzes is also generously weighted in your favor. Again, the quizzes are to highlight key ideas or assess your grasp of some complex material, not to be punitive.
+Each week, quizzes will be posted to Brightspace on Monday with the rest of the module. Quizzes will be graded using the scale below, and will involve 10-20 multiple choice questions. You must complete each quiz by midnight each Sunday. In the interest of fairness of assessment, I will not accept late quizzes. The quizzes will be timed; once you begin, you will have 20 minutes to complete the quiz. They will be in multiple choice format, but they will require you to apply concepts from the readings. The intent of the quizzes is to help underscore important concepts, ensure you are reading the material with some depth, and thinking through the implications of course material. The questions will vary in their degree of difficulty, so please do not be discouraged if some seem tricky. I will be dropping your lowest three quiz grades. Consider those passes to use as you wish; whether it is taking an easy week or dealing with an unexpected circumstance, you have three freebies. Note that the grading of the quizzes is also generously weighted in your favor. Again, the quizzes are to highlight key ideas or assess your grasp of some complex material, not to be punitive.
 
 ::: callout-warning
 Just because the quizzes go live every Monday and are due by midnight every Sunday does not mean you have to DO the quizzes at 11 pm on Sunday; you are all adults with varying levels of outside commitments and this structure allows for five weekdays/weeknights and the weekends to get the quizzes done when it is best for you.
@@ -168,7 +168,7 @@ Key:
 -   Attend/participate in class! Again, class participation is 10% of your grade, and you can't participate if you're not in class or watching the class videos. If you DO need to miss class (emergencies, sickness, etc.), please contact me as soon as possible and let me know. It will be your responsibility to notify me and to get any notes/materials from other students.
 -   Cell phones: we all have them, and they can be quite distracting. I ask that you please be courteous and silence your cell phone and leave it out of sight (in a pocket/purse/bag) during class.
 -   Feel free to eat and drink in class. I only ask that you do so quietly and in a manner that does not disrupt class.
--   All assignments and non-textbook readings will be posted to the class Zotero Library. I will email any announcements or updates to the class and also post them in the Blackboard. Report any trouble accessing anything on the Blackboard as soon as you encounter the problem.
+-   All assignments and non-textbook readings will be posted to the class Zotero Library. I will email any announcements or updates to the class and also post them in the Brightspace. Report any trouble accessing anything on the Brightspace as soon as you encounter the problem.
 -   I have a strict open door policy. If there is anything about the course, the assignments, the grading, the material, class, or anything related to public administration/policy or statistics broadly that you would like to discuss, do not hesitate to visit me during office hours or email me. I can respond via email, schedule a phone call, or schedule a separate meeting. I am here to help, so please do not hesitate to reach out to me. (But please be respectful of my time!)
 -   **HAVE FUN!** Public administration/policy is a broad topic that explores big, important questions that affect everyone. Discussing these topics should be as fun and interesting as it is challenging.
 -   The table below lays out the grading scale that will be used in assigning final course grades.
