--- a/syllabus500.qmd
+++ b/syllabus500.qmd
@@ -56,13 +56,12 @@ When you receive an announcement that the group invitations for the class librar
 
 Since the class is an asynchronous class and not inherently structured by class time, I find it helpful to describe a typical week a student can expect from the course. The course is structured so that students use Brightspace to 1) watch lectures, 2) receive and turn in assignments, 3) interact, and 4) ask general questions for me. A typical week will involve:
 
-1.  Mondays a new module will open and it will include i) an overview of the week's topics, ii) list of assigned reading, and iii) list of assignments.
-2.  Fridays the group assignment will be due for the week. I will then provide feedback on group assignments with a video in the following week's module.
-3.  Sundays the weekly readings quiz will be due on Brightspace.
+1. Mondays a new module will open and it will include i) an overview of the week's topics, ii) list of assigned reading, and iii) list of assignments. 
+2. Fridays the group assignment will be due for the week. I will then provide feedback on group assignments with a video in the following week's module. 
+3. Sundays the weekly readings quiz will be due on Brightspace.
 
 ::: callout-note
 ## A Note on Groups
-
 In this class you tackle broader research projects on teams. This is by design because most professional work is conducted on teams, most decisions in public work are made by consensus, and opportunities to learn to adjust to different working styles while managing projects helps develop important and transferable skills. I strongly encourage you to meet with your groups with an early video call and get to know each other, your schedules, and so on. Communication helps dramatically in successful groups. That said, some group dynamics can - in very rare circumstances - become bad for all involved. I provide two means for coping: first, students can use peer evaluations to ensure accountability in group work. And second, if that is insufficient, the group can vote to remove a member and inform me of the decision. No harm, no foul. This should be considered a measure of last resort and only pursued if a group member has made no contributions to the group.
 :::
 
@@ -72,10 +71,10 @@ In this class you tackle broader research projects on teams. This is by design b
 
 The following assignments will form the basis of your grade in this course:
 
-1.  Two essays (70% of final grade)
-2.  Weekly quizzes (15% of final grade)
-3.  Group assignments (10% of final grade)
-4.  Participation (5% of final grade)
+1. Two essays (70% of final grade) 
+2. Weekly quizzes (15% of final grade) 
+3. Group assignments (10% of final grade) 
+4. Participation (5% of final grade)
 
 ::: callout-important
 All assignments will be turned in via Brightspace.
@@ -87,22 +86,22 @@ To assess your understanding of the course material and your ability to apply co
 
 Pre-writing tasks. To improve the quality of the essays, you may submit for feedback a one page summary of the major arguments of your essay one week before each essay is due. **I will not accept late submissions of summaries.** I will return the summaries 2 to 3 days after submission.
 
-Acceptable sources. Generally, your research should use primary sources more than secondary sources. Primary sources include, but are not limited to: government reports, legislative hearings and testimonies, court decisions, and government auditor reports. Secondary sources are summaries and interpretations of primary sources. Secondary sources include, but are not limited to, articles from major newspapers and news magazines, network and cable news programs, and academic research. Blogs and Wikipedia are not acceptable sources. Be an intelligent consumer of information by evaluating secondary sources for potential political bias. If it is well known that a particular source is liberal or conservative, you must compensate for this in the paper. Acknowledge its bias and balance the information with something from a source on the other side of the political spectrum. Here are some places to start with your research, but feel free to consult other sources:
+Acceptable sources. Generally, your research should use primary sources more than secondary sources. Primary sources include, but are not limited to: government reports, legislative hearings and testimonies, court decisions, and government auditor reports. Secondary sources are summaries and interpretations of primary sources. Secondary sources include, but are not limited to, articles from major newspapers and news magazines, network and cable news programs, and academic research. Blogs and Wikipedia are not acceptable sources. Be an intelligent consumer of information by evaluating secondary sources for potential political bias. If it is well known that a particular source is liberal or conservative, you must compensate for this in the paper. Acknowledge its bias and balance the information with something from a source on the other side of the political spectrum. Here are some places to start with your research, but feel free to consult other sources: 
 
--   Academic research published in public administration, political science, economics, or policy journals such as: *Public Administration Review, Journal of Public Administration Research and Theory, American Review of Public Administration, Administration and Society, Journal of Public Policy Analysis and Management, American Political Science Review, American Journal of Political Science, and Journal of Politics, American Economic Review, Journal of Labor Economics, Policy Studies Journal.*
--   Congressional testimony (available through Lexis/Nexis via the library) and reports completed by Congressional committee staff
--   Agency Inspector General reports
--   [Congressional Research Service reports](www.opencrs.com)
--   [U.S. Government Accountability Office reports](www.gao.gov)
--   The library also has research support services for this class, which can be found [here](https://libguides.library.albany.edu/pad500/home)
+- Academic research published in public administration, political science, economics, or policy journals such as: *Public Administration Review, Journal of Public Administration Research and Theory, American Review of Public Administration, Administration and Society, Journal of Public Policy Analysis and Management, American Political Science Review, American Journal of Political Science, and Journal of Politics, American Economic Review, Journal of Labor Economics, Policy Studies Journal.* 
+- Congressional testimony (available through Lexis/Nexis via the library) and reports completed by Congressional committee staff 
+- Agency Inspector General reports 
+- [Congressional Research Service reports](www.opencrs.com) 
+- [U.S. Government Accountability Office reports](www.gao.gov) 
+- The library also has research support services for this class, which can be found [here](https://libguides.library.albany.edu/pad500/home)
 
-Submission of papers. Each final essay is due by midnight on the designated due date. Electronic versions of the paper are to be submitted via the SafeAssign link in Brightspace. It is the student's responsibility to ensure the electronic file is readable and not corrupted. Please note: once you hit the submit button in SafeAssign, you cannot go back and submit a different version.
+Submission of papers. Each final essay is due by midnight on the designated due date. Electronic versions of the paper are to be submitted via the SafeAssign link in Blackboard. It is the student's responsibility to ensure the electronic file is readable and not corrupted. Please note: once you hit the submit button in SafeAssign, you cannot go back and submit a different version.
 
 Late assignments. An assignment is considered late if the paper copy is not submitted at the beginning of class, if the electronic file is not submitted before class, and/or if the electronic file is not readable. Assignments (electronic or hard copy) submitted 10 minutes after the beginning of class or the launch of the following module will be considered late and will be automatically reduced by 10%. Papers submitted one day after the due date will be automatically reduced by 20%; essays submitted two days after the assigned date will be reduced by 30%, etc. Exceptions will be made for extreme health and family emergencies.
 
 ### Weekly Quizzes
 
-Each week, quizzes will be posted to Brightspace on Monday with the rest of the module. Quizzes will be graded using the scale below, and will involve 10-20 multiple choice questions. You must complete each quiz by midnight each Sunday. In the interest of fairness of assessment, I will not accept late quizzes. The quizzes will be timed; once you begin, you will have 20 minutes to complete the quiz. They will be in multiple choice format, but they will require you to apply concepts from the readings. The intent of the quizzes is to help underscore important concepts, ensure you are reading the material with some depth, and thinking through the implications of course material. The questions will vary in their degree of difficulty, so please do not be discouraged if some seem tricky. I will be dropping your lowest three quiz grades. Consider those passes to use as you wish; whether it is taking an easy week or dealing with an unexpected circumstance, you have three freebies. Note that the grading of the quizzes is also generously weighted in your favor. Again, the quizzes are to highlight key ideas or assess your grasp of some complex material, not to be punitive.
+Each week, quizzes will be posted to Blackboard on Monday with the rest of the module. Quizzes will be graded using the scale below, and will involve 10-20 multiple choice questions. You must complete each quiz by midnight each Sunday. In the interest of fairness of assessment, I will not accept late quizzes. The quizzes will be timed; once you begin, you will have 20 minutes to complete the quiz. They will be in multiple choice format, but they will require you to apply concepts from the readings. The intent of the quizzes is to help underscore important concepts, ensure you are reading the material with some depth, and thinking through the implications of course material. The questions will vary in their degree of difficulty, so please do not be discouraged if some seem tricky. I will be dropping your lowest three quiz grades. Consider those passes to use as you wish; whether it is taking an easy week or dealing with an unexpected circumstance, you have three freebies. Note that the grading of the quizzes is also generously weighted in your favor. Again, the quizzes are to highlight key ideas or assess your grasp of some complex material, not to be punitive.
 
 ::: callout-warning
 Just because the quizzes go live every Monday and are due by midnight every Sunday does not mean you have to DO the quizzes at 11 pm on Sunday; you are all adults with varying levels of outside commitments and this structure allows for five weekdays/weeknights and the weekends to get the quizzes done when it is best for you.
@@ -149,7 +148,7 @@ Key:
 | 9/11  |                           Accountability                            |     ✅      |                 📄 Friedrich <br/> 📄 Finer <br/> 📄 Romzek & Dubnick                  |
 | 9/18  |              Decision-Making and Public Participation               | ✅ <br/> 👥 | 📖 Chapter 5 <br/> 📄 Eden & Ackerman <br/> 📄 Fung <br/> 📄 Einstein, Palmer, & Glick |
 | 9/25  |             Decision-Making in a Political Environment              | ✅ <br/> 👥 |                           📖 Chapter 1 & 3 <br/> 📄 Collins                            |
-| 10/2  |                         Equity and Fairness                         | ✅ <br/> 👥 |              📄 Sandel <br/> 📄 Riccucci Chapter 2 & 3 <br/> 📄 Rothstein  <br/> 📄 Herd et al.           |
+| 10/2  |                         Equity and Fairness                         | ✅ <br/> 👥 |              📄 Sandel <br/> 📄 Riccucci Chapter 2 & 3 <br/> 📄 Rothstein              |
 | 10/11 |                 Essay 1 Assignment and Preparation                  |             |                                                                                        |
 | 10/16 |             Direct Government: Street-level Bureaucrats             | ✅ <br/> 👥 |               📄 Lipsky <br/> 📄 Maynard-Moody & Musheno <br/> 📄 Pynes                |
 | 10/23 |                  Government by Proxy: Contracting                   |     ✅      |                          📄 Kelman <br/> 📄 Brown & Potowski                           |
@@ -169,7 +168,7 @@ Key:
 -   Attend/participate in class! Again, class participation is 10% of your grade, and you can't participate if you're not in class or watching the class videos. If you DO need to miss class (emergencies, sickness, etc.), please contact me as soon as possible and let me know. It will be your responsibility to notify me and to get any notes/materials from other students.
 -   Cell phones: we all have them, and they can be quite distracting. I ask that you please be courteous and silence your cell phone and leave it out of sight (in a pocket/purse/bag) during class.
 -   Feel free to eat and drink in class. I only ask that you do so quietly and in a manner that does not disrupt class.
--   All assignments and non-textbook readings will be posted to the class Zotero Library. I will email any announcements or updates to the class and also post them in the Brightspace. Report any trouble accessing anything on the Brightspace as soon as you encounter the problem.
+-   All assignments and non-textbook readings will be posted to the class Zotero Library. I will email any announcements or updates to the class and also post them in the Blackboard. Report any trouble accessing anything on the Blackboard as soon as you encounter the problem.
 -   I have a strict open door policy. If there is anything about the course, the assignments, the grading, the material, class, or anything related to public administration/policy or statistics broadly that you would like to discuss, do not hesitate to visit me during office hours or email me. I can respond via email, schedule a phone call, or schedule a separate meeting. I am here to help, so please do not hesitate to reach out to me. (But please be respectful of my time!)
 -   **HAVE FUN!** Public administration/policy is a broad topic that explores big, important questions that affect everyone. Discussing these topics should be as fun and interesting as it is challenging.
 -   The table below lays out the grading scale that will be used in assigning final course grades.
@@ -206,7 +205,6 @@ Academic honesty is something your professor takes very seriously. Cheating in a
 
 ::: callout-important
 ## ChatGPT and Other LLMs
-
 By now, we are all aware of the technological advances in generative large language models (LLMs) trained on large quantities of written language scraped from around the internet. The University policy considers the use of ChatGPT and other generative LLMs to produce classwork without explicit permission from the instructor an act of plagiarism. I do not permit the use of ChatGPT or other generative LLMs in this course. First, generative LLMs can at times invent fictional sources, recombine information that is confidently stated but ultimately incorrect, and can produce generally mediocre and formulaic writing. Such events make the output unreliable - particularly for people aiming to be professionals working in the institutions that govern our society. Second, and more importantly, grappling with complicated trade-offs, collecting and synthesizing complex information thoughtfully, and going through the process of articulating your decisions and the knowledge base that inform them is a large part of an effective professional career. Learning in general is an arduous process that involves practice, trial and error, and confronting your current limits before finding ways to overcome them. In short, learning is work and the process by which that work occurs is often reading and writing, poorly at first and much better over time. I do think that, properly understood, LLMs can be a useful tool in managing routine tasks in which you have mastered the background, can detect and correct errors, and can use such tools effectively. However, early in your careers and in your academic lives, the very purpose of being in a graduate program is to have opportunities to learn new things (or old things in new ways) and using an LLM to do the work involved in learning will only cheat you of opportunities to learn, grow, and develop deeper and more lasting skills. Finally, and more practically, if you are caught using LLMs to produce the work assigned in this class, the work will be given a 0 and you will be cited for plagiarism.
 :::
 
