--- a/essay2.qmd
+++ b/essay2.qmd
@@ -7,8 +7,8 @@ This is a group project.  Your team will submit one joint essay.
 :::
 
 ::: callout-note
-**_One page summary_** due by midnight on Monday, November 20th via Blackboard.\\
-**_Final paper_** due by midnight on Monday, December 11th via Blackboard.\\
+**_One page summary_** due by midnight on Monday, November 20th via Blackboard.
+**_Final paper_** due by midnight on Monday, December 11th via Blackboard.
 **_Group evaluation_** due by midnight on Monday, December 11th via Blackboard.
 :::
 
